# xml_to_mysql

./: .gitignore  Cargo.toml  LICENSE  README.md  station_data  station_data.xml  station_data_cache.xml  test.rs  text2.rs  weather_data_cache.xml
src/: database.rs  fetch.rs  main.rs  parse.rs  parse_xml.rs  station.rs  station_data_cache.xml  weather_data_cache.xml
